SMX_Size3ISRU req. cooling 500

--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size3ISRU/ISRU.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size3ISRU/ISRU.cfg
@@ -52,11 +52,11 @@ MODEL
 		AutoShutdown = true
 		TemperatureModifier
 		{
-			key = 0 100000
-			key = 750 50000
-			key = 1000 10000
-			key = 1250 500	
-			key = 2000 50	
+			key = 0 250000
+			key = 750 125000
+			key = 1000 25000 // req. cooling 500 
+			key = 1250 1250	
+			key = 2000 125	
 			key = 4000 0
 		}				
 		GeneratesHeat = true
@@ -116,11 +116,11 @@ MODEL
 		AutoShutdown = true
 		TemperatureModifier
 		{
-			key = 0 100000
-			key = 750 50000
-			key = 1000 10000
-			key = 1250 500	
-			key = 2000 50	
+			key = 0 250000
+			key = 750 125000
+			key = 1000 25000 // req. cooling 500 
+			key = 1250 1250	
+			key = 2000 125	
 			key = 4000 0
 		}				
 		GeneratesHeat = true
@@ -171,13 +171,13 @@ MODEL
 		AutoShutdown = true
 		TemperatureModifier
 		{
-			key = 0 100000
-			key = 750 50000
-			key = 1000 10000
-			key = 1250 500	
-			key = 2000 50	
+			key = 0 250000
+			key = 750 125000
+			key = 1000 25000 // req. cooling 500 
+			key = 1250 1250	
+			key = 2000 125	
 			key = 4000 0
-		}				
+		}		
 		GeneratesHeat = true
 		DefaultShutoffTemp = .8
 		ThermalEfficiency 
@@ -228,11 +228,11 @@ MODEL
 		AutoShutdown = true
 		TemperatureModifier
 		{
-			key = 0 100000
-			key = 750 50000
-			key = 1000 10000
-			key = 1250 500	
-			key = 2000 50	
+			key = 0 250000
+			key = 750 125000
+			key = 1000 25000 // req. cooling 500 
+			key = 1250 1250	
+			key = 2000 125	
 			key = 4000 0
 		}				
 		GeneratesHeat = true
