--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size3StackDrill/Drill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size3StackDrill/Drill.cfg
@@ -43,7 +43,7 @@ tags = drill extractor harvest isru mine )mining (ore resource
 		ConverterName = #autoLOC_502038 //#autoLOC_502038 = Surface Harvester
 		StartActionName = #autoLOC_502039 //#autoLOC_502039 = Start Surface Harvester
 		StopActionName = #autoLOC_502040 //#autoLOC_502040 = Stop Surface Harvester
-		ToggleActionName = #autoLOC_502041 //#autoLOC_502041 = Toggle Surface
+		ToggleActionName = #autoLOC_502041 //#autoLOC_502041 = Toggle Surface Harvester
 		ImpactTransform = ImpactTransform
 		ImpactRange = 5
 		AutoShutdown = true
@@ -77,14 +77,51 @@ tags = drill extractor harvest isru mine )mining (ore resource
 			key = 1000 0
 		}
 	}
-
 	MODULE
 	{
 		name = ModuleAsteroidDrill
 		DirectAttach = false
 		StartActionName = #autoLOC_502042 //#autoLOC_502042 = Start Asteroid Harvester
 		StopActionName = #autoLOC_502043 //#autoLOC_502043 = Stop Asteroid Harvester
-		ToggleActionName = #autoLOC_502044 //#autoLOC_502044 = Toggle Asteroid
+		ToggleActionName = #autoLOC_502044 //#autoLOC_502044 = Toggle Asteroid Harvester
+		PowerConsumption = 1
+		Efficiency = 87.5
+		ImpactRange = 5
+		ImpactTransform = ImpactTransform
+		UseSpecialistBonus = true
+		AutoShutdown = true
+		GeneratesHeat = true
+		TemperatureModifier
+		{
+			key = 0 45000
+			key = 250 37500
+			key = 500 30000
+			key = 750 5000
+			key = 1000 0
+		}		
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		SpecialistBonusBase = 0.05
+		UseSpecialistHeatBonus = true
+		SpecialistHeatFactor = 0.1
+		ExperienceEffect = DrillSkill
+		EfficiencyBonus = 1
+		ThermalEfficiency 
+		{
+			key = 0 0.1
+			key = 250 .5
+			key = 500 1
+			key = 750 .1
+			key = 1000 0
+		}
+	}
+	MODULE
+	{
+		name = ModuleCometDrill
+		DirectAttach = false
+		StartActionName = #autoLOC_6002534 //#autoLOC_6002534 = Start Comet Harvester
+		StopActionName = #autoLOC_6002535 //#autoLOC_6002535 = Stop Comet Harvester
+		ToggleActionName = #autoLOC_6002536 //#autoLOC_6002536 = Toggle Comet Harvester
 		PowerConsumption = 1
 		Efficiency = 87.5
 		ImpactRange = 5
