--- a/MiningExpansion/GameData/MiningExpansion/Parts/DeployableWheel/RoverWheel.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/DeployableWheel/RoverWheel.cfg
@@ -126,7 +126,7 @@ EFFECTS
 	{
 		name = ModuleWheelSuspension
 		baseModuleIndex = 0
-		suspensionTransformName = suspensionPivot
+		suspensionTransformName = SuspensionPivot
 		maximumLoad = 50.0
 		suspensionDistance = 0.1
 		targetPosition = 0.0
