--- a/MiningExpansion/GameData/MiningExpansion/Parts/DeployableWheel/inlineWheelL.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/DeployableWheel/inlineWheelL.cfg
@@ -35,7 +35,7 @@ PART
 	angularDrag = 1
 	//crashTolerance = 7
 	maxTemp = 2600 // = 3600
-	crashTolerance = 120
+	crashTolerance = 50
 	breakingForce = 80
 	breakingTorque = 80
 	bulkheadProfiles = srf, size1
@@ -128,7 +128,7 @@ EFFECTS
 	{
 		name = ModuleWheelSuspension
 		baseModuleIndex = 0
-		suspensionTransformName = suspensionPivot
+		suspensionTransformName = SuspensionPivot
 		maximumLoad = 90.0
 		suspensionDistance = 0.15
 		targetPosition = 0.0
@@ -162,7 +162,7 @@ EFFECTS
 		torqueCurve
 		{
 			key = 0 40 0 0
-			key = 10 8 0 0//2.5 2.0 0 0
+			key = 15 16 0 0//2.5 2.0 0 0
 			key = 40 1 0 0//36 0.5 0 0
 			key = 45 0 0 0//38 0 0 0
 		}
