--- a/MiningExpansion/GameData/MiningExpansion/Parts/Mk2ISRUDrill/Drill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Mk2ISRUDrill/Drill.cfg
@@ -87,7 +87,6 @@ tags = #LOC_SMX_InlineDril_Tags
 		}
 
 	}
-
 	MODULE
 	{
 		name = ModuleAsteroidDrill
@@ -126,16 +125,53 @@ tags = #LOC_SMX_InlineDril_Tags
 			key = 1000 0
 		}
 	}
-
+	MODULE
+	{
+		name = ModuleCometDrill
+		DirectAttach = false
+		StartActionName = #autoLOC_6002534 //#autoLOC_6002534 = Start Comet Harvester
+		StopActionName = #autoLOC_6002535 //#autoLOC_6002535 = Stop Comet Harvester
+		ToggleActionName = #autoLOC_6002536 //#autoLOC_6002536 = Toggle Comet Harvester
+		PowerConsumption = 1.5
+		Efficiency = 3.5
+		ImpactRange = 3
+		ImpactTransform = ImpactTransform
+		UseSpecialistBonus = true
+		AutoShutdown = true
+		GeneratesHeat = true
+		TemperatureModifier
+		{
+			key = 0 10000
+			key = 250 7500
+			key = 500 3750
+			key = 750 500
+			key = 1000 0
+		}		
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		SpecialistBonusBase = 0.05
+		UseSpecialistHeatBonus = true
+		SpecialistHeatFactor = 0.1
+		Specialty = DrillSkill
+		EfficiencyBonus = 1
+		ThermalEfficiency 
+		{
+			key = 0 0.1
+			key = 250 .1
+			key = 500 1
+			key = 750 .1
+			key = 1000 0
+		}
+	}
 	MODULE
 	{
 		name = ModuleAnimationGroup
 		deployAnimationName = Deploy_Drill
 		activeAnimationName = Drill_Running
-		deployActionName = #autoLOC_6002390 
-		retractActionName = #autoLOC_6002391 
-		toggleActionName = #autoLOC_6002392 
-		moduleType = #autoLOC_7001228 	
+		deployActionName = #autoLOC_6002384 //#autoLOC_6002384 = Deploy <<1>>
+		retractActionName = #autoLOC_6002385 //#autoLOC_6002385 = Retract <<1>>
+		toggleActionName = #autoLOC_6002386 //#autoLOC_6002386 = Toggle <<1>>
+		moduleType = #autoLOC_7001228 //#autoLOC_7001228 = Drill
 	}	
 	MODULE
 	{
