--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size0Klaw/part.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size0Klaw/part.cfg
@@ -11,7 +11,8 @@ PART
 	TechRequired = actuators
 	entryCost = 3600
 	cost = 150
-	category = Coupling
+	TechHidden = True
+	category = none
 	subcategory = 0
 	title = #LOC_SMX_Size0Klaw_name
 	manufacturer = #autoLOC_501649 //#autoLOC_501649 = Kerbal Motion LLC
@@ -33,7 +34,7 @@ PART
 	MODEL
 	{
 		model = MiningExpansion/Parts/Size0Klaw/Model
-		texture = grabberDiffuse, Squad/Parts/Utility/GrapplingDevice/grabberDiffuse
+		texture = grabberDiffuse, MiningExpansion/Parts/Assets/grabberDiffuse
 
 	}
 	MODULE
