--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size0StackDrill/Drill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size0StackDrill/Drill.cfg
@@ -165,7 +165,10 @@ MODEL
 		name = ModuleAnimationGroup
 		deployAnimationName = Size0Unpack
 		activeAnimationName = Size0Running
-		moduleType = Drill
+		deployActionName = #autoLOC_6002384 //#autoLOC_6002384 = Deploy <<1>>
+		retractActionName = #autoLOC_6002385 //#autoLOC_6002385 = Retract <<1>>
+		toggleActionName = #autoLOC_6002386 //#autoLOC_6002386 = Toggle <<1>>
+		moduleType = #autoLOC_7001228 //#autoLOC_7001228 = Drill
 	}	
 	MODULE
 	{
