--- a/MiningExpansion/GameData/MiningExpansion/Parts/VerticalGear/VerticalGear.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/VerticalGear/VerticalGear.cfg
@@ -114,7 +114,7 @@ EFFECTS
 		FitWheelColliderToMesh = False		
 		radius = 0.235
 		center = 0,0,0
-		mass = 1
+		mass = 0.4
 		groundHeightOffset = 2
 				
 		TooltipTitle = #autoLOC_502081 //#autoLOC_502081 = Rover Wheel
@@ -124,7 +124,7 @@ EFFECTS
 	{
 		name = ModuleWheelSuspension
 		baseModuleIndex = 0
-		suspensionTransformName = suspensionPivot
+		suspensionTransformName = SuspensionPivot
 		maximumLoad = 35.0
 		suspensionDistance = 0.8
 		targetPosition = 0.0
@@ -151,15 +151,15 @@ EFFECTS
 		name = ModuleWheelMotor
 		baseModuleIndex = 0
 		
-		wheelSpeedMax = 59//37 208 kph
+		wheelSpeedMax = 19//37 208 kph
 		driveResponse = 2
 		
 		torqueCurve
 		{
-			key = 0 3.0 0 0
-			key = 3 2.1 0 0//2.5 2.0 0 0
-			key = 8 0.75 0 0//36 0.5 0 0
-			key = 10 0 0 0//38 0 0 0
+			key = 0 30 0 0
+			key = 9 21 0 0//2.5 2.0 0 0
+			key = 17 7.5 0 0//36 0.5 0 0
+			key = 20 0 0 0//38 0 0 0
 		}
 		RESOURCE
 		{
