--- a/MiningExpansion/GameData/MiningExpansion/Parts/DeployableWheel/InlineWheelS.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/DeployableWheel/InlineWheelS.cfg
@@ -16,10 +16,9 @@ PART
 
 	scale = 1
 	rescaleFactor = 1.0
-	node_stack_top = 0.0, 0.0, 0.364, 0.0, 0.0, 1.0, 0
-	node_stack_bottom = 0.0, 0.0, -0.364, 0.0, 0.0, -1.0, 0
-	node_attach = 0.0, 0.3125, 0.0, 0.0, 1.0, 0.0, 1
-	mirrorRefAxis = 0, 0, 1
+	node_stack_top = 0.0, 0.0, 0.364, 0.0, 0.0, 1.0
+	node_stack_bottom = 0.0, 0.0, -0.364, 0.0, 0.0, -1.0
+	node_attach = 0.0, 0.312, 0.0, 0.0, 1.0, 0.0, 1
 	TechRequired = fieldScience
 	entryCost = 5200
 	cost = 550
@@ -28,18 +27,18 @@ PART
 	title = #LOC_SMX_InlineWheelS
 	manufacturer = #LOC_SMX_manufacturer_title
 	description = #LOC_SMX_InlineWheelS_desc
-	attachRules = 1,1,1,1,1
+	attachRules = 1,1,1,1,0
 	mass = 0.15
 	dragModelType = default
 	maximum_drag = 0.3
 	minimum_drag = 0.2
 	angularDrag = 1
 	//crashTolerance = 7
-	maxTemp = 2400 // = 3600
-	crashTolerance = 50
+	maxTemp = 2600 // = 3600
+	crashTolerance = 30
 	breakingForce = 50
 	breakingTorque = 50
-	bulkheadProfiles = srf, size0
+	bulkheadProfiles = srf, size1
 	tags = #autoLOC_8310131 //#autoLOC_8310131 = )car drive ground roll rover wheel
 
 EFFECTS
@@ -119,7 +118,7 @@ EFFECTS
 		FitWheelColliderToMesh = False		
 		radius = 0.235
 		center = 0,0,0
-		mass = 0.1
+		mass = 0.40
 		groundHeightOffset = 1
 				
 		TooltipTitle = #autoLOC_502081 //#autoLOC_502081 = Rover Wheel
@@ -129,9 +128,9 @@ EFFECTS
 	{
 		name = ModuleWheelSuspension
 		baseModuleIndex = 0
-		suspensionTransformName = suspensionPivot
-		maximumLoad = 25.0
-		suspensionDistance = 0.075
+		suspensionTransformName = SuspensionPivot
+		maximumLoad = 50.0
+		suspensionDistance = 0.15
 		targetPosition = 0.0
 		springRatio = 12
 		damperRatio = 1.0
@@ -144,7 +143,7 @@ EFFECTS
 		
 		caliperTransformName = SteeringPivot
 		
-		steeringResponse = 2
+		steeringResponse = 1
 		steeringCurve
 		{
 			key = 0 20
@@ -162,15 +161,15 @@ EFFECTS
 		
 		torqueCurve
 		{
-			key = 0 2.0 0 0
-			key = 10 1.4 0 0//2.5 2.0 0 0
-			key = 27 0.5 0 0//36 0.5 0 0
-			key = 30  0 0 0//38 0 0 0
+			key = 0 20 0 0
+			key = 15 16 0 0//2.5 2.0 0 0
+			key = 27 1 0 0//36 0.5 0 0
+			key = 30 0 0 0//38 0 0 0
 		}
 		RESOURCE
 		{
 			name = ElectricCharge
-			rate = 2.5//7
+			rate = 2//7
 		}		
 		idleDrain = 0.0//0.1////0.5
 	}	
@@ -179,7 +178,7 @@ EFFECTS
 		name = ModuleWheelBrakes
 		baseModuleIndex = 0
 		
-		maxBrakeTorque = 2
+		maxBrakeTorque = 6
 		brakeResponse = 1
 	}
 	MODULE
@@ -227,6 +226,31 @@ MODULE
 			moversName = SteeringActuator
 		}
 	}
+	MODULE
+	{
+		name = FXModuleLookAtConstraint			// scissor links
+		CONSTRAINLOOKFX
+		{
+			targetName = Anchor2
+			rotatorsName = Link1
+		}
+		CONSTRAINLOOKFX
+		{
+			targetName = Anchor1
+			rotatorsName = Link2
+		}
+		CONSTRAINLOOKFX
+		{
+			targetName = UpperExtender
+			rotatorsName = LowerExtender
+		}
+		CONSTRAINLOOKFX
+		{
+			targetName = LowerExtender
+			rotatorsName = UpperExtender
+		}
+	}
+
 	MODULE
 	{
 		name = ModuleTestSubject
