--- a/MiningExpansion/GameData/MiningExpansion/Parts/VerticalGear/VerticalGearL.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/VerticalGear/VerticalGearL.cfg
@@ -124,7 +124,7 @@ EFFECTS
 	{
 		name = ModuleWheelSuspension
 		baseModuleIndex = 0
-		suspensionTransformName = suspensionPivot
+		suspensionTransformName = SuspensionPivot
 		maximumLoad = 70.0
 		suspensionDistance = 1.6
 		targetPosition = 0.0
@@ -151,15 +151,15 @@ EFFECTS
 		name = ModuleWheelMotor
 		baseModuleIndex = 0
 		
-		wheelSpeedMax = 59//37 208 kph
+		wheelSpeedMax = 19//37 208 kph
 		driveResponse = 2
 		
 		torqueCurve
 		{
-			key = 0 5.0 0 0
-			key = 3 5.2 0 0//2.5 2.0 0 0
-			key = 8 1.5 0 0//36 0.5 0 0
-			key = 10 0 0 0//38 0 0 0
+			key = 0 50 0 0
+			key = 9 42 0 0//2.5 2.0 0 0
+			key = 17 15 0 0//36 0.5 0 0
+			key = 20 0 0 0//38 0 0 0
 		}
 		RESOURCE
 		{
