--- a/MiningExpansion/GameData/MiningExpansion/Localization/en-us.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Localization/en-us.cfg
@@ -159,10 +159,10 @@ Localization
 	#LOC_SMX_OE = Oceanic Extractor
 	#LOC_SMX_ToggleOE = Toggle Pump
 
-	#LOC_SMX_StartFC = Start Generator (LF/O)
-	#LOC_SMX_StopFC = Stop Generator (LF/O)
-	#LOC_SMX_FC = Generator (LF/O)
-	#LOC_SMX_ToggleFC = Toggle Generator (LF/O)
+	#LOC_SMX_StartFC = Start Generator (LF+Ox)
+	#LOC_SMX_StopFC = Stop Generator (LF+Ox)
+	#LOC_SMX_FC = Generator (LF+Ox)
+	#LOC_SMX_ToggleFC = Toggle Generator (LF+Ox)
 
 	#LOC_SMX_StartOFC = Start Generator (Ore)
 	#LOC_SMX_StopOFC = Stop Generator (Ore)
