Remove broken wheel

--- a/MiningExpansion/GameData/MiningExpansion/Localization/en-us.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Localization/en-us.cfg
@@ -113,7 +113,7 @@ Localization
 	#LOC_SMX_Size1Drill_tags = SMX drill extractor harvest isru mine )mining (ore resource
 
 	#LOC_SMX_Size1Pump_title = D4-MP Stack Oceanic Extractor
-	#LOC_SMX_Size1PumpInline_title = Inline Oceamic Extractor
+	#LOC_SMX_Size1PumpInline_title = Inline Oceanic Extractor
 	#LOC_SMX_Size1Pump_desc = Originally a bilge pump for ocean going vessels, this unit has been adapted and modified to serve as an oceanic resource harvester by making it pump liquids in rather than out. Warning: Prolonged use may cause vessel to sink.
 
 	#LOC_SMX_Size2Pump_title = W-37 Stack Oceanic Extractor
